--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,86 @@
-body{
-    margin:0;
-    padding:0;
+@import url("https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap");
+* {
+  margin: 0px;
+  padding: 0px;
 }
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45% , 44%); }
+body {
+  background-color: hsl(30, 38%, 92%);
+}
+
+.container {
+  /* position: absolute; */
+  display: flex;
+  width: 450px;
+  background-color: hsl(0, 0%, 100%);
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 12rem;
+  border-radius: 5px;
+}
+img {
+  width: 200px;
+  border-radius: 5px;
+}
+.prod-details {
+  padding-left: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-around;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+.what-prod {
+  text-transform: uppercase;
+  font-family: "Montserrat", sans-serif;
+  color: #b4b4b3;
+  font-size: 11px;
+  letter-spacing: 3px;
+}
+h2,
+.prod-name {
+  font-family: "Fraunces", serif;
+  font-weight: normal;
+  padding-right: 4.5rem;
+  line-height: 25px;
+}
+.prod-desc {
+  color: #b4b4b3;
+  padding-right: 2rem;
+  font-family: "Montserrat", sans-serif;
+  font-size: 12px;
+}
+.capital {
+  text-transform: uppercase;
+}
+.prod-price {
+  display: flex;
+  align-items: center;
+}
+.final-price {
+  font-size: 26px;
+  font-family: "Fraunces", serif;
+  color: #527853;
+  margin-right: 1rem;
+}
+.initial-price {
+  color: #b4b4b3;
+  font-family: "Montserrat", sans-serif;
+  font-size: 10px;
+  text-decoration: line-through;
+}
+.btn {
+  display: flex;
+  background-color: #527853;
+  color: hsl(0, 0%, 100%);
+  padding: 8px 44px;
+  gap: 10px;
+  border-radius: 4px;
+  border: 1px solid #527853;
+  font-family: "Montserrat", sans-serif;
+}
+.attribution {
+  margin-left: 35rem;
+  margin-top: 2rem;
+  font-family: "Montserrat", sans-serif;
+}
